# ITI_AVR_ATMEGA32

./: CMakeLists.txt  README.md  avr_gcc_toolchain.cmake
APPS/LABS/TASK1/: CMakeLists.txt
APPS/LABS/TASK1/src/: main.c
APPS/LABS/TASK2/: CMakeLists.txt
APPS/LABS/TASK2/src/: main.c
APPS/LABS/TASK3/: CMakeLists.txt
APPS/LABS/TASK3/src/: main.c
APPS/LABS/TASK4/: CMakeLists.txt
APPS/LABS/TASK4/src/: main.c
APPS/LABS/TASK_SWs_LEDs/: CMakeLists.txt
APPS/LABS/TASK_SWs_LEDs/src/: main.c
APPS/LABS/TASK_SevSeg_Test/: CMakeLists.txt
APPS/LABS/TASK_SevSeg_Test/src/: main.c
APPS/LABS/TASK_SwLeds_DRIVE/: CMakeLists.txt
APPS/LABS/TASK_SwLeds_DRIVE/src/: main.c
APPS/LABS/TASK_TestLED_DRIVE/: CMakeLists.txt
APPS/LABS/TASK_TestLED_DRIVE/src/: main.c
APPS/LABS/Test_PortDriver/: CMakeLists.txt
APPS/LABS/Test_PortDriver/src/: main.c
COTS/COMMON/: Bit_Math.h  StdTypes.h
COTS/Cmake/: flash.cmake
COTS/HAL/HLED/: CMakeLists.txt
COTS/HAL/HLED/inc/: HLED.h
COTS/HAL/HLED/src/: HLED.c  HLED_Config.c
COTS/HAL/HSEVENSEG/: CMakeLists.txt
COTS/HAL/HSEVENSEG/inc/: HSEVENSEG.h  HSEVENSEG_Config.h
COTS/HAL/HSEVENSEG/src/: HSEVENSEG.c  HSEVENSEG_Config.c
COTS/HAL/HSWITCH/: CMakeLists.txt
COTS/HAL/HSWITCH/inc/: HSWITCH.h  HSWITCH_Config.h
COTS/HAL/HSWITCH/src/: HSWITCH.c  HSWITCH_Config.c
COTS/MCAL/MDIO/: CMakeLists.txt
COTS/MCAL/MDIO/inc/: MDIO.h
COTS/MCAL/MDIO/src/: MDIO.c
COTS/MCAL/MPORT/: CMakeLists.txt
COTS/MCAL/MPORT/inc/: MPORT.h  MPORT_LCFG.h
COTS/MCAL/MPORT/src/: MPORT.c  MPORT_LCFG.c
CTOS/COMMON/: MemMap.h  Utils.h
CTOS/Cmake/: flash.cmake
CTOS/MCAL/MDIO/: CMakeLists.txt
CTOS/MCAL/MDIO/inc/: MDIO.h  MDIO_LCFG.h  MDIO_PBCFG.h
CTOS/MCAL/MDIO/src/: MDIO.c  MDIO_LCFG.c
